@@ -1,8 +1,4 @@
-package src;
-
-import src.OrderBookEngine;
-import src.RandomDouble;
-import src.RandomInt;
+package orderbook;
 
 public class Main {
 
@@ -17,40 +13,39 @@ public class Main {
 	public static void show() {
 
 		OrderBookEngine engine = new OrderBookEngine();
-		engine.addBidOrder(9.9, 1000);
-		engine.addBidOrder(9.8, 3000);
-		engine.addBidOrder(9.7, 5000);
+		engine.addBidRestingOrder(9.9, 1000);
+		engine.addBidRestingOrder(9.8, 3000);
+		engine.addBidRestingOrder(9.7, 5000);
 
-		engine.addAskOffer(10.1, 3000);
-		engine.addAskOffer(10.2, 3000);
-		engine.addAskOffer(10.3, 10000);
-
-		engine.printOrderBook();
-
-		engine.receiveOrder(10.5, 17000, true);
+		engine.addAskRestingOffer(10.1, 3000);
+		engine.addAskRestingOffer(10.2, 3000);
+		engine.addAskRestingOffer(10.3, 10000);
 
 		engine.printOrderBook();
 
-		engine.receiveOrder(9.8, 60000, false);
+		engine.onOrder(10.5, 17000, OrderBookEngine.Side.BUY);
 
 		engine.printOrderBook();
 
-		engine.receiveOrder(9.8, 55000, true);
+		engine.onOrder(9.8, 60000, OrderBookEngine.Side.SELL);
 
 		engine.printOrderBook();
 
-		engine.receiveOrder(1, 5000, false);
+		engine.onOrder(9.8, 55000, OrderBookEngine.Side.BUY);
 
 		engine.printOrderBook();
 
-		engine.printExecutedBook();
+		engine.onOrder(1, 5000, OrderBookEngine.Side.SELL);
+
+		engine.printOrderBook();
 
 	}
 
-	public static void g() throws InterruptedException {
+	public static void stress() {
 		OrderBookEngine engine = new OrderBookEngine();
 		long n1 = System.currentTimeMillis();
 		int ITERATIONS = 10000000;
+		System.out.println("Running for " + ITERATIONS + " iterations.");
 		for (int i = 0; i < ITERATIONS; i++) {
 
 			if(i % 100000 == 0) {
@@ -60,11 +55,11 @@ public class Main {
 			if (randomDouble.nextDouble() > 50) {
 				double price = randomDouble.nextDouble();
 				int qty = randomInt.nextInt();
-				engine.receiveOrder(price, qty, true);
+				engine.onOrder(price, qty, OrderBookEngine.Side.BUY);
 			} else {
 				double price = randomDouble.nextDouble();
 				int qty = randomInt.nextInt();
-				engine.receiveOrder(price, qty, false);
+				engine.onOrder(price, qty, OrderBookEngine.Side.SELL);
 			}
 
 		}
@@ -72,15 +67,15 @@ public class Main {
 		long elapsedTimeMillis = System.currentTimeMillis() - n1;
 		long elapsedTimeMicros = elapsedTimeMillis * 1000;
 		
-		System.out.println(((double)elapsedTimeMicros) / ITERATIONS + " us on average");
+		System.out.println(((double)elapsedTimeMicros) / ITERATIONS + " us on average.");
 		engine.reset();
 
 	}
 	/**
-	 * -Xmx4096m -Xms4096m -server -verbose:gc -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -XX:+UseParNewGC -XX:+UseFastAccessorMethods
+	 * -Xmx4096m -Xms4096m -server
 	 */
-	public static void main(String[] args) throws InterruptedException {
-		g();
+	public static void main(String[] args) {
+		stress();
 	}
 
 }
